2016-02-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (nodeline_print): Move to info/window.c.
	(parse_top_node_line): Remove code altering start of node 
	depending on value of nodeline_print.
	* info/window.c (calculate_line_starts): Use nodeline variable 
	to decide where to start displaying the node.
	(window_line_of_point): Comments changed.

2016-02-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.c (info_node_of_tag_ext): Don't save a pointer into 
	the file buffer in the tag table, because it could continue 
	after the file buffer was garbage collected.  Change the logic 
	around so that the NODE field of the TAG structure is 
	initialized from the NODE object we return, instead of vice versa.
	* info/nodes.h (FILE_BUFFER, TAG): Comments changed.
	* info/t/search-split-after-index.sh: New test.

2016-02-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Customization Variables and Options): Move 
	@vindex commands after @item, so that the index entries refer to 
	the right row of the @multitable.

2016-02-13  Gavin Smith  <gavinsmith0123@gmail.com>

	Implement --javascript-ref option, suggested by Per Bothner.

	* tp/texi2any.pl ($result_options): New option --javascript-ref.
	($cmdline_options): New value 'JAVASCRIPT_REFS'.
	* tp/Texinfo/Convert/HTML.pm
	(default_javascript_lines): New function.
	(%default_formatting_references): Add 'javascript_lines', and 
	comment changed.
	(output): Call default_javascript_lines (indirectly).
	(_file_header_informations): Look at and return 
	'JAVASCRIPT_LINES' conf value.  Callers updated.
	(_default_begin_file, default_node_redirection_page): Include 
	lines referring to a JavaScript file in the file header.
	* tp/Texinfo/Common.pm (@variable_string_settables): Add 
	'JAVASCRIPT_LINES'.
	(@variable_other_settables): Add 'JAVASCRIPT_REFS'.

2016-02-09  Karl Berry  <karl@freefriends.org>

	* doc/texinfo.texi (Output Formats) <XML>: explicitly mention that